fix form layout bug

--- a/less/forms.less
+++ b/less/forms.less
@@ -745,7 +745,7 @@
     // Increase spacing between groups
     .control-group {
       margin-bottom: @baseLineHeight;
-      .clearfix();
+      display: table;
     }
 
     // Float the labels left
